--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="container">
         <nav class="navbar">
             <div class="logohere">
-                <img src="" alt="">
-            </div>
+                <img src="" alt=""></div>
                 <ul>
                     <li>Home</li>
                     <li>Domain</li>
@@ -23,7 +22,6 @@
                     <li>About</li>
                 </ul>
                 <button class="buttonone">Register Now</button>
-            </div>
         </nav>
         <!-- END OF NAVBAR SECTION -->
 
