--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav class="navbar">
             <div class="logohere">
-                <img src="" alt=""></div>
+                <img src="./assets/Logo.png" alt=""></div>
                 <ul>
                     <li>Home</li>
                     <li>Domain</li>
@@ -21,7 +21,7 @@
                     <li>Pricing</li>
                     <li>About</li>
                 </ul>
-                <button class="buttonone">Register Now</button>
+                <button class="buttonone"  >Register Now</button>
         </nav>
         <!-- END OF NAVBAR SECTION -->
 
@@ -31,11 +31,10 @@
                 <h1>Great Websites Start with unlimited Hosting</h1>
                 <p>We provide the best offer of unlimited web hosting.The most complete features,affordable prices, and 24/7 technical support are at your disposal. </p>
             </div>
-            <button type="button">Choose Package</button>
+            <button class="secbutton1">Choose Package</button>
             <div class="sec-one-img">
                 <img src="./assets/cloud-host.svg" alt="">
             </div>
-        </section>
         <div class="sectiontwo">
             <img src="./assets/security.svg" alt="image of security">
             <h2>We Provide the Best Quality With low cost</h2>
@@ -57,6 +56,7 @@
             <p>Contact Niagahoster's Customer Success Agent at any time when ther is a problem with your website. No need to wait long, your problem will be resolved quickly</p>
 
         </div>
+        </section>
 
 
         <!-- This is the end of section part -->
@@ -582,3 +582,5 @@
 </body>
 
 </html>
+
+
