--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button type="button">Read More</button>
         </div>
         <div class="sectionthree">
-            <h1>Great Websites Start with unlimited Hosting</h1>
+            <h1>Number One technical Support in Indonesia</h1>
             <p>We provide the best offer of unlimited web hosting.The most complete features,affordable prices, and 24/7 technical support are at your disposal. </p>
         </div>
         <button type="button">Choose Package</button>
