--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         <div class="sectiontwo">
             <img src="./assets/security.svg" alt="image of security">
-            <h2>We Provide the Best Quality With low cost</h2>
+            <h2>We Provide the Best <br>Quality With low cost</h2>
             <p>You can really have a ready-made website for only a small fee. complete features will facillate the website creation process, from Auto-install
                 WordPress, cPanel, to free SSL
             </p>
