--- a/index.html
+++ b/index.html
@@ -26,37 +26,47 @@
         <!-- END OF NAVBAR SECTION -->
 
         <!-- SECTION ONE STARTS HERE -->
-        <section>
-            <div class="sectionone">
-                <h1>Great Websites Start with unlimited Hosting</h1>
-                <p>We provide the best offer of unlimited web hosting.The most complete features,affordable prices, and 24/7 technical support are at your disposal. </p>
-            </div>
-            <button class="secbutton1">Choose Package</button>
-            <div class="sec-one-img">
-                <img src="./assets/cloud-host.svg" alt="">
-            </div>
-        <div class="sectiontwo">
-            <img src="./assets/security.svg" alt="image of security">
-            <h2>We Provide the Best <br>Quality With low cost</h2>
-            <p>You can really have a ready-made website for only a small fee. complete features will facillate the website creation process, from Auto-install
-                WordPress, cPanel, to free SSL
-            </p>
-            <button type="button">Read More</button>
-        </div>
-        <div class="sectionthree">
-            <h1>Number One technical Support in Indonesia</h1>
-            <p>We provide the best offer of unlimited web hosting.The most complete features,affordable prices, and 24/7 technical support are at your disposal. </p>
-        </div>
-        <button type="button">Choose Package</button>
-        <div class="sec-one-img">
-            <img src="./assets/technical-support.svg" alt="">
-        </div>
-        <div class="sectionfour">
+             <div class="horizontalslides"> 
+                 <div class="sectionone">
+                    <h1>Great Websites Start with unlimited Hosting</h1>
+                    <p>We provide the best offer of unlimited web hosting.The most complete features,affordable prices, and 24/7 technical support are at your disposal. </p>
+                </div>
+                    <button class="secbutton1">Choose Package</button>
+                 <div class="sec-one-img">
+                    <img src="./assets/cloud-host.svg" alt="">
+                </div>
+             </div>
+            
+             <!-- slides One End  -->
+
+             <!-- starts slides two  -->
+             
+             <div class="sectiontwo">
+                        <img src="./assets/security.svg" alt="image of security">
+                            <h2>We Provide the Best <br>Quality With low cost</h2>
+                             <p>You can really have a ready-made website for only a small fee. complete features will facillate the website creation process, from Auto-install
+                                WordPress, cPanel, to free SSL
+                            </p>
+                        <button type="button">Read More</button> 
+                 </div>
+
+
+                 <!-- sectionthree starts here  -->
+
+              <div class="sectionthree">
+                         <h1>Number One technical Support in Indonesia</h1>
+                              <p>We provide the best offer of unlimited web hosting.The most complete features,affordable prices, and 24/7 technical support are at your disposal. </p>
+                          <button type="button">Choose Package</button>
+                          <div class="sec-one-img">
+                                  <img src="./assets/technical-support.svg" alt="">
+                        </div>
+                </div>
+
+                 <div class="sectionfour">
             <h1>Servies we provide at ThorHosting</h1>
             <p>Contact Niagahoster's Customer Success Agent at any time when ther is a problem with your website. No need to wait long, your problem will be resolved quickly</p>
 
-        </div>
-        </section>
+             </div>
 
 
         <!-- This is the end of section part -->
